crates/biome_cli/tests/snapshots/main_commands_check/check_returns_error_for_css_sorting.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check src/file.css
```

## `biome.json`

```json
{
  "assist": {
    "enabled": true,
    "actions": {
      "source": {
        "useSortedProperties": "on"
      }
    }
  }
}
```

## `src/file.css`

```css
body {
  padding: 1em;
  color: red;
  display: block;
}
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
src/file.css:1:6 assist/source/useSortedProperties  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The properties are not sorted.
  
  > 1 │ body {
      │      ^
  > 2 │   padding: 1em;
  > 3 │   color: red;
  > 4 │   display: block;
  > 5 │ }
      │ ^
    6 │ 
  
  i Safe fix: Sort these properties
  
    1 1 │   body {
    2   │ - ··padding:·1em;
    3   │ - ··color:·red;
    4   │ - ··display:·block;
      2 │ + ··display:·block;
      3 │ + ··padding:·1em;
      4 │ + ··color:·red;
    5 5 │   }
    6 6 │   
  

```

```block
src/file.css format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1 1 │   body {
    2   │ - ··padding:·1em;
    3   │ - ··color:·red;
    4   │ - ··display:·block;
      2 │ + → padding:·1em;
      3 │ + → color:·red;
      4 │ + → display:·block;
    5 5 │   }
    6 6 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
