crates/biome_cli/tests/snapshots/main_commands_check/check_skip_parse_errors.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --skip-parse-errors valid.js invalid.js
```

## `invalid.js`

```js
if

```

## `valid.js`

```js
for(;true;);

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
invalid.js parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Skipped file with syntax errors
  

```

```block
valid.js:1:6 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This condition always evaluates to the same value.
  
  > 1 │ for(;true;);
      │      ^^^^
    2 │ 
  
  i Constant conditions make branches and loops harder to reason about because they cannot react to runtime values.
  
  i Replace it with a condition that depends on changing values, or remove the condition if it is intentional.
  

```

```block
valid.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1 │ for·(;·true;·);
      │    +  +     +  

```

```block
Checked 2 files in <TIME>. No fixes applied.
Found 2 errors.
Found 1 info.
```
