crates/biome_cli/tests/snapshots/main_commands_check/check_stdin_applies_the_config_based_on_path.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --stdin-file-path apps/test/index.tsx
```

## `biome.json`

```json
{
  "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
  "linter": {
    "enabled": true,
    "rules": {
      "preset": "recommended"
    }
  },
  "formatter": {
    "indentStyle": "space"
  },
  "javascript": {
    "formatter": {
      "quoteStyle": "single",
      "semicolons": "asNeeded",
      "arrowParentheses": "always",
      "trailingCommas": "es5"
    }
  },
  "overrides": [
    {
      "includes": ["apps/test/**"],
      "javascript": {
        "formatter": {
          "lineWidth": 100
        }
      }
    }
  ]
}
```

# Input messages

```block
const _t = [
  colors.l3BackgroundTertiary,
  colors.l3BackgroundPositive,
  colors.l3BackgroundTertiary,
]

```

# Emitted Messages

```block
const _t = [colors.l3BackgroundTertiary, colors.l3BackgroundPositive, colors.l3BackgroundTertiary]

```
