crates/biome_cli/tests/snapshots/main_commands_check/check_stdin_ignored_path_is_relative_to_the_working_directory.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --stdin-file-path=src/mock.cc --files-ignore-unknown=true
```

# Input messages

```block
int main() {}
```

# Emitted Messages

```block
int main() {}
```

```block
The content was not fixed because the path `src/mock.cc` is ignored.
```
