crates/biome_cli/tests/snapshots/main_commands_check/check_stdin_ignores_unknown_file_path.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --unsafe --stdin-file-path mock.cc --files-ignore-unknown true
```

# Input messages

```block
function f() {var x=1; return{x}} class Foo {}
```

# Emitted Messages

```block
function f() {var x=1; return{x}} class Foo {}
```

```block
The content was not fixed because the path `mock.cc` is ignored.
```
